// Copyright (c) 2018 ContentBox Authors.
// Use of this source code is governed by a MIT-style
// license that can be found in the LICENSE file.

syntax = "proto3";
package rpcpb;

import "transaction.proto";
import "google/api/annotations.proto";

service WebApi {
    rpc ViewTxDetail (ViewTxDetailReq) returns (ViewTxDetailResp) {
        option (google.api.http) = {
            post: "/v1/tx/detail"
            body: "*"
        };
    }

    rpc ViewBlockDetail (ViewBlockDetailReq) returns (ViewBlockDetailResp) {
        option (google.api.http) = {
            post: "/v1/block/detail"
            body: "*"
        };
    }

    rpc ListenAndReadNewBlock(ListenBlocksReq) returns (stream BlockDetail);

    rpc DoCall (CallReq) returns (CallResp) {
        option (google.api.http) = {
            post: "/v1/contract/call"
            body: "*"
        };
    }

    rpc Nonce (NonceReq) returns (NonceResp) {
        option (google.api.http) = {
            post: "/v1/account/nonce"
            body: "*"
        };
    }
}

message ViewTxDetailReq {
    string hash = 1;
    bool spread_split = 2;
}

enum TxStatus {
    unknown = 0;
    pending = 1;
    onchain = 2;
    confirmed = 3;
}

message ViewTxDetailResp {
    int32 code = 1;
    string message = 2;
    int32 version = 3;
    int64 block_time = 4;
    uint32 block_height = 5;
    TxStatus status = 6;
    TxDetail detail = 7;
}

message ViewBlockDetailReq {
    string hash = 1;
}

message ViewBlockDetailResp {
    int32 code = 1;
    string message = 2;
    BlockDetail detail = 3;
}

message ContractInfo {
  uint32 fee = 1;
  bool failed = 2;
  uint64 gas_limit = 3;
  uint64 gas_used = 4;
  uint64 gas_price = 5;
  uint64 nonce = 6;
  string data = 7;
}

message ListenBlocksReq {
}

message TxDetail {
    string hash = 1;
    enum res {
        coinbase = 0;
        external_account = 1;
        contract_account = 2;
    }
    res resource = 2;
    repeated TxInDetail vin = 3;
    repeated TxOutDetail vout = 4;
}

message TxInDetail {
    TxOutDetail prev_out_detail = 1;
    string script_sig = 2;
    uint32 sequence = 3;
    string prev_out_point = 4;
}

message TxOutDetail {
    string addr = 1;
    uint64 value = 2;
    string script_pub_key = 3;
    string script_disasm = 4;
    enum TxOutType {
        unknown = 0;
        pay_to_pubkey_hash = 1;
        pay_to_pubkey_hash_cltv = 2;
        token_issue = 3;
        token_transfer = 4;
        new_split_addr = 5;
        pay_to_script_hash = 6;
        contract_create = 7;
        contract_call = 8;
    }
    TxOutType type = 5; 
    oneof appendix {
        TokenIssueInfo token_issue_info = 6; 
        TokenTransferInfo token_transfer_info = 7;
        SplitContractInfo split_contract_info = 8;
        ContractInfo contract_info = 9;
    }
}

message BlockDetail {
    int32 version = 1;
    uint32 height = 2;
    int64 time_stamp = 3;
    uint32 size = 4;
    string hash = 5;
    string prev_block_hash = 6;
    string coin_base = 7;
    bool confirmed = 8;
    string signature = 9;
    repeated TxDetail txs = 10;
}

message TokenIssueInfo {
    TokenTag token_tag = 1;
}

message SplitContractInfo  {
    repeated string addrs = 1;
    repeated uint64 weights = 2;
}

message TokenTransferInfo {
    string token_id = 1;
}

message CallReq {
    string from = 1;
    string to = 2;
    string data = 3;
    uint32 height = 4;
    uint32 timeout = 5;
}

message CallResp {
    int32 code = 1;
    string message = 2;
    string output = 3;
}

message NonceReq {
    string addr = 1;
}

message NonceResp {
    int32 code = 1;
    string message = 2;
    uint64 nonce = 3;
}
